Part 1: done with css, need to update other 2 html docs

--- a/requirements.org
+++ b/requirements.org
@@ -28,12 +28,12 @@
 
 *** Requirements
 
-    - [ ] Theme paragraphs with CSS
-    - [ ] Theme header tags with CSS
-    - [ ] Theme images and images captions with CSS
-    - [ ] Change the colour scheme to something aesthetically pleasing
-    - [ ] Apply 1 CSS file to 3 gutenberg documents.
-    - [ ] Include all 3 gutenberg documents HTML and assets, with the CSS applied.
+    - [x] Theme paragraphs with CSS
+    - [x] Theme header tags with CSS
+    - [x] Theme images and images captions with CSS
+    - [x] Change the colour scheme to something aesthetically pleasing
+    - [x] Apply 1 CSS file to 3 gutenberg documents.
+    - [x] Include all 3 gutenberg documents HTML and assets, with the CSS applied.
     - [ ] document in your README what modifications you had to make
       to the project gutenberg HTML files.
     - [ ] Take 3 screenshots of firefox running all of your pages that
