--- a/requirements.org
+++ b/requirements.org
@@ -36,7 +36,7 @@
     - [x] Include all 3 gutenberg documents HTML and assets, with the CSS applied.
     - [x] document in your README what modifications you had to make
       to the project gutenberg HTML files.
-    - [ ] Take 3 screenshots of firefox running all of your pages that
+    - [x] Take 3 screenshots of firefox running all of your pages that
       demonstrates your theme.
 
 ** Part II 
@@ -86,8 +86,8 @@
 
 ** Restrictions
    - [ ] You may use Python
-   - [ ] Must run in your VM (Firefox and Chromium)
-   - [ ] License your content properly (use a Creative Commons License
+   - [x] Must run in your VM (Firefox and Chromium)
+   - [x] License your content properly (use a Creative Commons License
      like CC-BY-ND or CC-BY-SA)
      - Put your name on it!
    - [ ] If you borrow CSS, always cite the author and the source
