--- a/requirements.org
+++ b/requirements.org
@@ -67,13 +67,13 @@
 
 *** Requirements
 
-    - [ ] 4 sections: who you are, your history, what you have to
+    - [x] 4 sections: who you are, your history, what you have to
       offer, important points about you
-    - [ ] 1 Ugly CSS theme
-    - [ ] 1 good CSS theme
-    - [ ] Ugly theme has to be noticeabley different.
-    - [ ] 2 HTML files, each with the same content but different CSS
-    - [ ] your photo (try to keep it professional)
+    - [x] 1 Ugly CSS theme
+    - [x] 1 good CSS theme
+    - [x] Ugly theme has to be noticeabley different.
+    - [x] 2 HTML files, each with the same content but different CSS
+    - [x] your photo (try to keep it professional)
     - [ ] Take 2 screenshots of firefox running all of your pages that
       demonstrates your theme.
     - [x] Ensure that files are appropriately named and CASE SENSITIVE.
@@ -85,12 +85,12 @@
     - [x] screenshots good.png, bad.png, gutenberg1.png, gutenberg2.png, gutenberg3.png should be in the root of the project.
 
 ** Restrictions
-   - [ ] You may use Python
+   - [x] You may use Python
    - [x] Must run in your VM (Firefox and Chromium)
    - [x] License your content properly (use a Creative Commons License
      like CC-BY-ND or CC-BY-SA)
      - Put your name on it!
-   - [ ] If you borrow CSS, always cite the author and the source
+   - [x] If you borrow CSS, always cite the author and the source
 
 ** Recommendations
 
