--- a/requirements.org
+++ b/requirements.org
@@ -74,7 +74,7 @@
     - [x] Ugly theme has to be noticeabley different.
     - [x] 2 HTML files, each with the same content but different CSS
     - [x] your photo (try to keep it professional)
-    - [ ] Take 2 screenshots of firefox running all of your pages that
+    - [x] Take 2 screenshots of firefox running all of your pages that
       demonstrates your theme.
     - [x] Ensure that files are appropriately named and CASE SENSITIVE.
     - [x] homepage/good.html should host your good page
